# trainer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
knowledge/chapters/: ch01_Introduction.md  ch02_BIT_CODES_AND_DATA_DEFINITIONS.md  ch03_R13-R15_DWG_FILE_FORMAT_ORGANIZATION.md  ch04_R2004_DWG_FILE_FORMAT_ORGANIZATION.md  ch05_R2007_DWG_FILE_FORMAT_ORGANIZATION.md  ch06_R2010_DWG_FILE_FORMAT_ORGANIZATION.md  ch07_R2013_DWG_FILE_FORMAT_ORGANIZATION.md  ch08_R2018_DWG_FILE_FORMAT_ORGANIZATION.md  ch09_Data_section_AcDbHeader_HEADER_VARIABLES.md  ch10_Data_section_AcDbClasses.md  ch11_PADDING_R13C3_AND_LATER.md  ch13_Data_section_AcDbSummaryInfo_Section.md  ch14_Data_section_AcDbPreview.md  ch15_Data_section_AcDbVBAProject_Section.md  ch16_Data_section_AcDbAppInfo.md  ch17_Data_section_AcDbFileDepList.md  ch18_Data_section_AcDbRevHistory.md  ch19_Data_section_AcDbSecurity.md  ch20_Data_section_AcDbAcDbObjects.md  ch21_Data_section_AcDbObjFreeSpace.md  ch22_Data_section_AcDbTemplate.md  ch23_Data_section_AcDbHandles_OBJECT_MAP.md  ch24_Section_AcDbAcDsPrototype_1b_DataStorage.md  ch25_UNKNOWN_SECTION.md  ch26_SECOND_FILE_HEADER_R13-R15.md  ch27_Data_section_AcDbAuxHeader_Auxiliary_file_header.md  ch28_Extended_Entity_Data_Extended_Object_Data.md  ch29_PROXY_ENTITY_GRAPHICS.md  full_specification.md
scripts/: __init__.py  build_autocad_index.py  build_index.py  demo_search.py  extract_autocad_pdf.py  extract_pdf.py
src/autocad_mcp/: __init__.py  planning.py  (+2 more)
tests/: test_autocad_extract.py  test_autocad_planning.py  test_chunking.py  test_extract.py  test_search.py
(+3 files in other folders)
