[project]
name = "dwg-spec-mcp"
version = "0.1.0"
description = "MCP server providing deep expertise on the DWG file format via RAG over the OpenDesign Specification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcp[cli]",
    "chromadb",
    "sentence-transformers",
    "pymupdf",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
dwg-extract = "scripts.extract_pdf:main"
dwg-index = "scripts.build_index:main"
dwg-mcp = "dwg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dwg_mcp", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
